--- a/assets/js-design-pattern/5.requirejs/book.html
+++ b/assets/js-design-pattern/5.requirejs/book.html
@@ -36,8 +36,6 @@
     </div>
   </div>
 
-  <script src="js/lib/jquery.js"></script>
-  <script src="js/lib/ba-tiny-pubsub.js"></script>
-  <script src="js/book.js"></script>
+  <script data-main="js/book.js" src="js/lib/require.js"></script>
 </body>
 </html>
