--- a/assets/js-design-pattern/3.module/book.html
+++ b/assets/js-design-pattern/3.module/book.html
@@ -37,6 +37,6 @@
   </div>
 
   <script src="js/lib/jquery.js"></script>
-  <script src="js/page.js"></script>
+  <script src="js/book.js"></script>
 </body>
 </html>
