--- a/assets/polymer-start/index.html
+++ b/assets/polymer-start/index.html
@@ -33,6 +33,7 @@
   <link rel="import" href="/elements/test-element/test-element.html">
 </head>
 <body unresolved>
-    <test-element age="111"></test-element>
+    <test-element></test-element>
+    <!-- <test-child-element></test-child-element> -->
 </body>
 </html>
