--- a/assets/polymer-start/index.html
+++ b/assets/polymer-start/index.html
@@ -30,10 +30,18 @@
       document.write('<script src="/bower_components/webcomponentsjs/webcomponents.js"><\/script>');
     }
   </script>
+  <script src="/bower_components/jquery/dist/jquery.js"></script>
   <link rel="import" href="/elements/test-element/test-element.html">
+  <link rel="import" href="/elements/jquery-element/jquery-element.html">
 </head>
 <body unresolved>
+    <h1>我是标题h1</h1>
+    <h2>我是标题h2</h2>
     <test-element></test-element>
     <!-- <test-child-element></test-child-element> -->
+    <jquery-element>
+      <h5>我是h5</h5>
+      <h6>h6</h6>
+    </jquery-element>
 </body>
 </html>
