--- a/assets/polymer-start/index.html
+++ b/assets/polymer-start/index.html
@@ -31,17 +31,15 @@
     }
   </script>
   <script src="/bower_components/jquery/dist/jquery.js"></script>
-  <link rel="import" href="/elements/test-element/test-element.html">
-  <link rel="import" href="/elements/jquery-element/jquery-element.html">
+  <link rel="import" href="/bower_components/iron-a11y-announcer/iron-a11y-announcer.html">
 </head>
 <body unresolved>
-    <h1>我是标题h1</h1>
-    <h2>我是标题h2</h2>
-    <test-element></test-element>
-    <!-- <test-child-element></test-child-element> -->
-    <jquery-element>
-      <h5>我是h5</h5>
-      <h6>h6</h6>
-    </jquery-element>
+  <iron-a11y-announcer></iron-a11y-announcer>
+
+  <script>
+    document.addEventListener('polymer-ready', function(){
+      console.log(21)
+    })
+  </script>
 </body>
 </html>
