--- a/assets/webcomponents/custom-element.html
+++ b/assets/webcomponents/custom-element.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>custom element</title>
   <style>
+    body{margin: 50px;}
+
     count-down{font:12px/20px "Microsoft Yahei";}
     count-down h4{color: #333; font-weight: 600;margin: 0;}
     count-down p{color: #f60;margin: 0 0 5px;}
