--- a/assets/webcomponents/elements/input-range.html
+++ b/assets/webcomponents/elements/input-range.html
@@ -140,7 +140,8 @@
             left : left
           })
 
-          this.circle.html(this.min + Math.ceil((left - this.left_boundary) / (this.right_boundary - this.left_boundary) * (this.max - this.min)))
+          this.value = this.min + Math.ceil((left - this.left_boundary) / (this.right_boundary - this.left_boundary) * (this.max - this.min));
+          this.circle.html(this.value);
         }
       })
     })
