--- a/assets/react-ppt/example2.html
+++ b/assets/react-ppt/example2.html
@@ -12,8 +12,8 @@
 </head>
 <body>
   <!-- 引用React,和将JSX语法转换成标准js的JSXTransformer -->
-  <script src="bower_components/react/react.js"></script>
-  <script src="bower_components/react/JSXTransformer.js"></script>
+  <script src="lib/react/react.js"></script>
+  <script src="lib/react/JSXTransformer.js"></script>
 
   <div id="wrapper"></div>
 
