--- a/assets/react-ppt/example4.html
+++ b/assets/react-ppt/example4.html
@@ -6,8 +6,8 @@
 </head>
 <body>
   <!-- 引用React,和将JSX语法转换成标准js的JSXTransformer -->
-  <script src="bower_components/react/react.js"></script>
-  <script src="bower_components/react/JSXTransformer.js"></script>
+  <script src="lib/react/react.js"></script>
+  <script src="lib/react/JSXTransformer.js"></script>
 
   <div id="wrapper"></div>
   <div id="wrapper2"></div>
