--- a/assets/react-ppt/example9.html
+++ b/assets/react-ppt/example9.html
@@ -7,9 +7,9 @@
 </head>
 <body>
   <!-- 引用React,和将JSX语法转换成标准js的JSXTransformer -->
-  <script src="bower_components/react/react.js"></script>
-  <script src="bower_components/react/JSXTransformer.js"></script>
-  <script src="bower_components/reflux/dist/reflux.js"></script>
+  <script src="lib/react/react.js"></script>
+  <script src="lib/react/JSXTransformer.js"></script>
+  <script src="lib/reflux/dist/reflux.js"></script>
 
   <div id="wrapper"></div>
 
