--- a/assets/zepto.tabswiper.js/tabswiper.html
+++ b/assets/zepto.tabswiper.js/tabswiper.html
@@ -34,6 +34,25 @@
   </style>
 </head>
 
+<div class="tab">
+  <div class="tab-nav-box">
+    <div class="tab-nav-wrapper">
+      <ul class="tab-nav">
+        <li>nav 1</li>
+        <li>nav 2</li>
+        <li>nav 3</li>
+      </ul>
+    </div>
+  </div>
+  <div class="tab-items-wrapper">
+    <div class="tab-items">
+      <div class="tab-item">item 1</div>
+      <div class="tab-item">item 2</div>
+      <div class="tab-item">item 3</div>
+    </div>
+  </div>
+</div>
+
 <body>
   <div class="tab">
     <div class="tab-nav-box">
@@ -67,7 +86,7 @@
       </div>
     </div>
   </div>
-  <script src="zepto.js"></script>
+  <script src="../lib/zepto.js"></script>
   <script src="tabswiper.js"></script>
   <script>
   var tabswiper = $('.tab').tabswiper({
