--- a/assets/literal-and-prototype/select/select.html
+++ b/assets/literal-and-prototype/select/select.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>CLASS</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
-  <link rel="stylesheet" href="/lib/base.css">
+  <link rel="stylesheet" href="/assets/lib/base.css">
   <link rel="stylesheet" href="select.css">
 </head>
 
@@ -27,7 +27,7 @@
 </body>
 
 </html>
-<script src="/lib/zepto.js"></script>
+<script src="/assets/lib/zepto.js"></script>
 <script src="select.js"></script>
 <script>
   $('.select:eq(1)').select('say');
