--- a/assets/zepto.tabswiper.js/tabswiper.html
+++ b/assets/zepto.tabswiper.js/tabswiper.html
@@ -5,13 +5,9 @@
   <meta charset="UTF-8">
   <title>zepto.tabswiper.js demo</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
+  <link rel="stylesheet" href="/assets/lib/base.css">
   <link rel="stylesheet" href="tabswiper.css">
   <style>
-  * {
-    margin: 0;
-    padding: 0;
-  }
-
   .tab-item div {
     padding: 10px;
     min-height: 600px;
@@ -86,7 +82,7 @@
       </div>
     </div>
   </div>
-  <script src="../lib/zepto.js"></script>
+  <script src="/assets/lib/zepto.js"></script>
   <script src="tabswiper.js"></script>
   <script>
   var tabswiper = $('.tab').tabswiper({
